# Vantare-Ingeniero

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  agents.md  findings.md  keys.json  progress.md  run_backend.ps1  start_backend.ps1  task_plan.md  test_qwen2.py  test_qwen_tts.py  test_voxtral.py  test_voxtral_gguf.py  tmp_delete_llm_service.py
backend/: .env  .env.example  AGENTS.md  README.md  SMOKE_TEST_PLAN.md  _delete_llm_service.py  _test_all_triggers.py  _test_edge_tts_integration.py  _test_triggers.py  build.py  build_backend.py  launch_tauri.py  pyproject.toml  qa_test_err.txt  qa_test_script.py  run_dev.bat  run_dev.py
backend/.chroma_db/: chroma.sqlite3
backend/benchmark_reports/: 20260531_120506_granite-4.1-8b_data.json  20260531_120506_granite-4.1-8b_report.md  20260531_131033_granite-4.1-8b_data.json  20260531_131033_granite-4.1-8b_report.md  20260531_180255_mistralai_ministral-3-3b_data.json  20260531_180255_mistralai_ministral-3-3b_report.md  20260531_181257_granite-4.1-8b_data.json  20260531_181257_granite-4.1-8b_report.md  20260531_183535_qwen3.5-4b-safety-thinking_data.json  20260531_183535_qwen3.5-4b-safety-thinking_report.md  20260531_184149_nvidia_nemotron-3-nano-4b_data.json  20260531_184149_nvidia_nemotron-3-nano-4b_report.md  20260531_184442_meta-llama-3.1-8b-instruct_data.json  20260531_184442_meta-llama-3.1-8b-instruct_report.md  20260531_184539_liquid_lfm2.5-1.2b_data.json  20260531_184539_liquid_lfm2.5-1.2b_report.md  20260531_190001_google_gemma-4-e2b_data.json  20260531_190001_google_gemma-4-e2b_report.md  20260531_190420_mistralai_ministral-3-3b_data.json  20260531_190420_mistralai_ministral-3-3b_report.md  20260531_193007_google_gemma-4-e4b_data.json  20260531_193007_google_gemma-4-e4b_report.md  20260531_194129_lfm2.5-8b-a1b_data.json  20260531_194129_lfm2.5-8b-a1b_report.md  20260531_213957_granite-4.1-8b_data.json  20260531_213957_granite-4.1-8b_report.md  20260531_214319_meta-llama-3.1-8b-instruct_data.json  20260531_214319_meta-llama-3.1-8b-instruct_report.md  20260531_214420_liquid_lfm2.5-1.2b_data.json  20260531_214420_liquid_lfm2.5-1.2b_report.md  20260531_220123_google_gemma-4-e2b_data.json  20260531_220123_google_gemma-4-e2b_report.md  20260531_220609_mistralai_ministral-3-3b_data.json  20260531_220609_mistralai_ministral-3-3b_report.md  20260531_221904_lfm2.5-8b-a1b_data.json  20260531_221904_lfm2.5-8b-a1b_report.md  20260531_224346_unsloth_granite-4.1-3b_data.json  20260531_224346_unsloth_granite-4.1-3b_report.md  20260531_225402_unsloth_granite-4.1-3b_data.json  20260531_225402_unsloth_granite-4.1-3b_report.md  (+4 more)
backend/data/: consumption_history.json
backend/data/profiles/: qa-manual.json
backend/scripts/: bench_ptt_latency.py  gen_keys.py  keys.json  live_spotter_diag.py  llm_client_live.py  llm_pipeline_audit.py  llm_smoke.py  llm_stream_inspect.py  post_pit_menu_live.py  probe_pit_menu_live.py  release_smoke.py  replay_trace.py  setup_venv.bat
backend/src/: config.py  debug_session_log.py  main.py  version.py
backend/src/app_runtime/: runtime.py
backend/src/auth/: database.py  google_provider.py  license_provider.py  models.py  protocol.py
backend/src/config/: __init__.py  global_behaviour.py  settings.py
backend/src/data/: car_class_data.py  spotter_phrases_en.json  spotter_phrases_es.json  trigger_phrases_en.json  trigger_phrases_es.json
backend/src/debug/: __init__.py  lmu_dummy_server.py
backend/src/intelligence/: base_event.py  cartesian_spotter.py  commentary_llm_formatter.py  commentary_orchestrator.py  competitor_queries.py  context_builder.py  coordinate_math.py  corner_names.py  damage_report.py  driver_names.py  engine.py  event_adapter.py  event_engine.py  event_flags.py  event_registry.py  flags_monitor.py  formatter.py  fuel_percentile.py  fuel_safety.py  gaps.py  immediate_alert.py  live_context.py  llm_client.py  llm_speech_sanitize.py  noisy_cartesian_spotter.py  number_speech.py  pearls_of_wisdom.py  penalty_tracker.py  personality_pack.py  phrase_catalog.py  phrase_picker.py  pilot_ptt_agent.py  pilot_tool_executor.py  pit_limiter_monitor.py  pit_prediction.py  proactive_monitors.py  prompt_templates.py  ptt_prompt_context.py  rain_monitor.py  sector_analysis.py  (+13 more)
backend/src/models/: enums.py  game_state_data.py  messages.py
backend/src/persistence/: __init__.py  event_store.py  fuel_usage_store.py  history_store.py  phrase_store.py  profile_store.py  (+1 more)
backend/tests/: analyze_m3_structure.py  benchmark_compare_cloud.py  benchmark_launch_all.py  benchmark_llm.py  benchmark_llm_v2.py  benchmark_local_v2.py  benchmark_m3_full.py  benchmark_m3_quick.py  benchmark_minimax.py  benchmark_minimax_full.py  benchmark_minimax_m3.py  benchmark_rag_format.md  benchmark_stepfun.py  benchmark_v2_runner.py  benchmark_v2_script.py  check_models.py  compare_full.py  compare_m3.py  compare_minimax.py  compare_raw.py  compare_results.py  conftest.py  debug_all_models.py  debug_broadcast.py  debug_broadcast2.py  debug_broadcast3.py  debug_broadcast4.py  debug_broadcast5.py  debug_broadcast6.py  debug_keywords.py  debug_mm_22q.py  debug_sf_mismatch.py  debug_sf_orig_vs_new.py  debug_stepfun.py  debug_stepfun_thinking.py  debug_sync_22q.py  debug_sync_vs_async.py  helpers.py  iter_v3.py  list_stepfun_models.py  (+319 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
shared-strategy/: README.md  pyproject.toml
shared-strategy/tests/: conftest.py  test_calculation.py  test_strategy.py
shared-telemetry/: README.md  pyproject.toml
shared-telemetry/shared_telemetry/: lmu_damage.py  lmu_fields.py  lmu_pit_limiter.py  session_kind.py
sidecar/: .env.example  README.md  build.py  pyproject.toml
(+752 files in other folders)
