[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantare-ingeniero-backend"
version = "0.1.0"
description = "Backend asíncrono para Vantare Ingeniero de IA en Le Mans Ultimate"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "edge-tts>=7.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "orjson>=3.9.15",
    "polars>=0.20.15",
    "numpy>=1.26.4",
    "piper-onnx>=1.0.0",
    "openai>=1.60.0",
    "python-multipart>=0.0.9",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "elevenlabs>=1.0.0",
    "msgpack>=1.0.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
