[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantare-ingeniero-backend"
version = "0.5.0"
description = "Backend asíncrono para Vantare Ingeniero de IA en Le Mans Ultimate"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "edge-tts>=7.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.28.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "orjson>=3.9.15",
  "polars>=0.20.15",
  "numpy>=1.26.4",
  "piper-onnx>=1.0.0",
  "openai>=1.60.0",
  "python-multipart>=0.0.9",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "elevenlabs>=1.0.0",
  "msgpack>=1.0.0",
  "google-genai>=1.0.0",
  "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.5",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.0.0",
  "ruff>=0.9.0",
]
mqtt = ["paho-mqtt>=2.0.0"]
asr = ["faster-whisper>=1.0.0"]
windows = ["pycaw>=20240210"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
]
ignore = [
  "E501", # line length — revisar manualmente después
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # assert en tests OK

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
asyncio_mode = "auto"
norecursedirs = [".git", "__pycache__", "benchmarks", "node_modules"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
