[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared-strategy"
version = "0.1.0"
description = "Motor de estrategia de carrera determinista sin dependencias de UI para Le Mans Ultimate"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
