[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared-telemetry"
version = "0.1.0"
description = "Extractor de telemetria en tiempo real para Le Mans Ultimate basado en memoria compartida"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0.0",
]
