[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vantare-ingeniero-sidecar"
version = "0.1.0"
description = "Sidecar StrategyService para Vantare Ingeniero IA — corre en Windows con shared memory real de LMU"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
